--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
 theme: jekyll-theme-hacker
 title: [Let's Make a Program]
-description: [You'll never learn to swim by reading books about the ocean.  Let's dive right in, together.]
-show_downloads: [false]
+description: [You'll never learn to swim by reading books about the ocean.  Let's dive in together.]
